fix markdown documentation code examples overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -190,6 +190,10 @@ pre {
   align-items: stretch;
 }
 
+.docs-comment div {
+  min-width: 0;
+}
+
 .docs-comment img {
   max-width: 100%;
 }
